Added functions for data analysis

--- a/Part 1 - Data Collection and Storage.ipynb
+++ b/Part 1 - Data Collection and Storage.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "import pandas as pd\n",
     "import string\n",
     "import datetime as dt\n",
-    "from praw.models import MoreComments"
+    "from praw.models import MoreComments\n",
+    "import re "
    ]
   },
   {
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +82,8 @@
     "    '''\n",
     "    function for cleaning the text\n",
     "    '''\n",
-    "    translator=str.maketrans('','',string.punctuation)\n",
-    "    result = text.translate(translator)\n",
+    "    \n",
+    "    result = re.sub('[^A-Za-z0-9]+', ' ', text)\n",
     "    return result.lower()\n",
     "def time_from_timestamp(timestamp):\n",
     "    '''\n",
@@ -108,41 +109,46 @@
     "\n",
     "    df_file = \"reddit_flair_data.csv\" #file for saving data\n",
     "\n",
-    "    subred = reddit.subreddit('india')\n",
+    "    subred = reddit.subreddit('india') # making the subreddit object for india\n",
     "    \n",
     "    for flair in flairs:\n",
-    "        subreds = subred.search(flair, limit=500)\n",
+    "        '''\n",
+    "        here we parse through each flair and we try to search for subreddits for one flair at a time and store them\n",
+    "        '''\n",
+    "        subreds = subred.search(flair, limit=200)\n",
     "        for submission in subreds:\n",
-    "            if not submission.stickied:\n",
-    "                data[\"flair\"].append(flair)\n",
-    "                data[\"title\"].append(submission.title)\n",
-    "                data[\"score\"].append(submission.score)\n",
-    "                data[\"id\"].append(submission.id)\n",
-    "                data[\"num_cmnts\"].append(submission.num_comments)\n",
-    "                data[\"created\"].append(submission.created)\n",
-    "                data[\"body\"].append(submission.selftext)\n",
-    "                \n",
-    "                comment = ''\n",
-    "                for top_level_comment in submission.comments:\n",
-    "                    if isinstance(top_level_comment, MoreComments):\n",
-    "                        continue\n",
-    "                    comment = comment + ' ' + top_level_comment.body\n",
+    "            data[\"flair\"].append(flair)\n",
+    "            data[\"title\"].append(submission.title)\n",
+    "            data[\"score\"].append(submission.score)\n",
+    "            data[\"id\"].append(submission.id)\n",
+    "            data[\"num_cmnts\"].append(submission.num_comments)\n",
+    "            data[\"created\"].append(submission.created)\n",
+    "            data[\"body\"].append(submission.selftext)\n",
+    "            comment = ''\n",
+    "            for top_level_comment in submission.comments:\n",
+    "                if isinstance(top_level_comment, MoreComments):\n",
+    "                    continue\n",
+    "                comment = comment + ' ' + top_level_comment.body\n",
+    "            data[\"comments\"].append(comment)\n",
     "        print(flair+\" done\")\n",
+    "        \n",
     "    df = pd.DataFrame(data)\n",
     "    \n",
-    "    df['created'].apply(time_from_timestamp)\n",
+    "    df['created'] = df['created'].apply(time_from_timestamp)\n",
     "    df['title'] = df['title'].apply(clean_text)\n",
     "    df['body'] =  df['body'].apply(clean_text)\n",
-    "#     df['comments'] = df['comments'].apply(clean_text)\n",
+    "    df['comments'] = df['comments'].apply(clean_text)\n",
     "    \n",
-    "    df.to_csv(df_file)\n",
+    "    df.to_csv(df_file,index=False)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -165,6 +171,13 @@
    "source": [
     "df = retrieve_data(reddit)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
