Changed the strategy for data collection,analysis

--- a/Notebooks/Part 1 - Data Collection and Storage.ipynb
+++ b/Notebooks/Part 1 - Data Collection and Storage.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
     "    '''\n",
     "    function for cleaning the text\n",
     "    '''\n",
-    "    \n",
+    "    text = re.sub(r\"http\\S+\", \" \", text)\n",
     "    result = re.sub('[^A-Za-z0-9]+', ' ', text)\n",
     "    return result.lower()\n",
     "def time_from_timestamp(timestamp):\n",
@@ -107,7 +107,7 @@
     "             'score': [],\n",
     "             'comments': []} #we will store the data in this dictionary and afterwards use it to store it as pandas dataframe\n",
     "\n",
-    "    df_file = \"reddit_flair_data.csv\" #file for saving data\n",
+    "    df_file = \"../reddit_flair_data.csv\" #file for saving data\n",
     "\n",
     "    subred = reddit.subreddit('india') # making the subreddit object for india\n",
     "    \n",
@@ -115,7 +115,7 @@
     "        '''\n",
     "        here we parse through each flair and we try to search for subreddits for one flair at a time and store them\n",
     "        '''\n",
-    "        subreds = subred.search(flair, limit=200)\n",
+    "        subreds = subred.search(flair, limit=500)\n",
     "        for submission in subreds:\n",
     "            data[\"flair\"].append(flair)\n",
     "            data[\"title\"].append(submission.title)\n",
@@ -171,13 +171,6 @@
    "source": [
     "df = retrieve_data(reddit)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
