Some changes to the notebooks and added experiment log

--- a/Notebooks and data/Notebooks/Part 3 Machine Learning.ipynb
+++ b/Notebooks and data/Notebooks/Part 3 Machine Learning.ipynb
@@ -361,18 +361,16 @@
    "source": [
     "## Analysis for the above model\n",
     "---\n",
-    "1. Model had an accuracy of approximately 63.2\n",
+    "1. Model had an accuracy of approximately 67.25\n",
     "\n",
     "\n",
-    "2. Model did well on predicting Science/Technology,Coronavirus and Food flairs with good precision,recall and f1. Also the confusion matrix is also quite clean with some traces of misclassification.\n",
+    "2. Model did well on predicting Photography, Science/Technology,Coronavirus and Food flairs with good precision,recall and f1. Also the confusion matrix is also quite clean with some traces of misclassification.\n",
     "\n",
     "\n",
     "3. Model did not performed well on the AskIndia flair with very low precision,recall and f1. It is also evident from the confusion matrix.\n",
     "\n",
     "\n",
-    "4. Politics flair was the one it was very picky in nature with high recall but a low precision taking the overall performance down.\n",
-    "\n",
-    "5. It performed average on all other flairs as depicted in the CM"
+    "4. It performed average on all other flairs as depicted in the CM"
    ]
   },
   {
@@ -504,13 +502,13 @@
     "## Analysis for the above model\n",
     "---\n",
     "\n",
-    "1. The Linear SVM performed very well as compareed to the Naive Bayes model with accuracy of 79.32 %. The imporced metrics for all flairs and the clean Confusion Matrix proves it's effectiveness\n",
+    "1. The Linear SVM performed very well as compareed to the Naive Bayes model with accuracy of 80.09 %. The improved metrics for all flairs and the clean Confusion Matrix proves it's effectiveness\n",
     "\n",
     "\n",
-    "2. Except AskIndia, Politics flairs the model was effective in predicting the other flairs with f1 score of over 0.70.\n",
+    "2. Except AskIndia, Politics flairs the model was effective in predicting the other flairs with f1 score of over 0.75.\n",
     "\n",
     "\n",
-    "3. It can correctly classify Photography,Food,Non-Political,Coronavirus and Science/Technology flairs.\n",
+    "3. It can correctly classify Photography,Food,Sprots,Non-Political,Coronavirus and Science/Technology flairs.\n",
     "\n",
     "\n",
     "4. No of AskIndia flairs being misclassified is still a concern since the dataset is balanced. "
@@ -636,7 +634,7 @@
     "## Analysis of the above model\n",
     "---\n",
     "\n",
-    "1. The Decision Tree classifier performs badly as compared to all the other ML models tried with an accuracy of 23.41% only.\n",
+    "1. The Decision Tree classifier performs badly as compared to all the other ML models tried with an accuracy of 16.47% only.\n",
     "\n",
     "\n",
     "2. It cannot fit the data and can be seen from the classification report and Confusion Matrix above.\n",
@@ -755,13 +753,13 @@
     "---\n",
     "\n",
     "\n",
-    "1. The model had a performance close to but less than the Linear SVM model with accuracy of approximately 77.3\n",
+    "1. The model had a performance better than the upper 3 models with acc of 82.54%.\n",
     "\n",
     "\n",
     "2. Model has performed well for all the flairs with a slight improvement in some flairs' prediction\n",
     "\n",
     "\n",
-    "3. The same problem persisits with the AskIndia and the Politics flair."
+    "3. The model has f1 score of >0.75 in all the flairs."
    ]
   },
   {
@@ -878,7 +876,7 @@
     "---\n",
     "\n",
     "\n",
-    "1. The accuracy of the model is 63.6% slightly better than the Naive Bayes model.\n",
+    "1. The accuracy of the model is 59.01% \n",
     "\n",
     "\n",
     "2. Best score was recorded for the Photography flair. The worst for the Scheduled."
@@ -990,13 +988,13 @@
     "---\n",
     "\n",
     "\n",
-    "1. The model had accuracy of 72%.\n",
+    "1. The model had accuracy of 75.88%.\n",
     "\n",
     "\n",
-    "2. Best scores recorded for the Photography, Coronavirus, Food.\n",
+    "2. Best scores recorded for the Photography, Coronavirus, Sports,Food.\n",
     "\n",
     "\n",
-    "3. Here also the model could not perform well for predicting AskIndia flair. This can be due to the reason that many posts belonging to other flairs were made in this only."
+    "3. AskIndia recorded the lowest f1 score."
    ]
   },
   {
@@ -1067,6 +1065,19 @@
     "if best_acc<acc:\n",
     "    best_acc = acc\n",
     "    best_model = nn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis of the above model\n",
+    "---\n",
+    "\n",
+    "\n",
+    "1. The model had accuracy of 50.58%.\n",
+    "\n",
+    "2. Highest F1 score was recorded for the Photography flair"
    ]
   },
   {
