added some changes in experiment log

--- a/Notebooks and data/Notebooks/Experiment Log.ipynb
+++ b/Notebooks and data/Notebooks/Experiment Log.ipynb
@@ -98,6 +98,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 4 Making the web app\n",
+    "\n",
+    "\n",
+    "1. Picked up Django framework for making the web app.\n",
+    "\n",
+    "\n",
+    "2. Django has a nice and clean working approach hence the web app got up and running in quick time. I also had experience in it so it did not required that much work.\n",
+    "\n",
+    "3. Integrating the model and not affecting the speed of web app much was the major concern. The best strategy was to load everything before hand and just make function calls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 5 Deployment to heroku\n",
+    "\n",
+    "\n",
+    "1. This did took a lot of effort as I never deployed a web app on heroku. Read many articles and after trial and removal finally deployed.\n",
+    "\n",
+    "Blogs and resources referred:\n",
+    "  1. https://simpleisbetterthancomplex.com/tutorial/2016/08/09/how-to-deploy-django-applications-on-heroku.html\n",
+    "  2. https://devcenter.heroku.com/articles/deploying-python"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
